<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".CardapioActivity">

    <TextView
        android:id="@+id/txtCardapioTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="597dp"
        android:justificationMode="none"
        android:text="@string/cardapio_titulo"
        android:textAlignment="center"
        android:textColor="@color/lightputple"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="589dp"
        android:justificationMode="none"
        android:text="@string/total"
        android:textAlignment="center"
        android:textColor="@color/lightputple"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtCQuantidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="411dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_text_hint"
        android:inputType="number"
        android:minHeight="48dp"
        android:singleLine="true"
        android:text="0"
        android:textColor="@color/lightputple"
        android:textColorHint="@color/purple"
        android:translationY="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCachorroQuente"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/txtCPreco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="262dp"
        android:layout_marginEnd="304dp"
        android:layout_marginBottom="439dp"
        android:text="@string/c_preco"
        android:textColor="@color/lightputple"
        android:textSize="24sp"
        android:translationX="-2dp"
        android:translationY="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtCachorroQuente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="224dp"
        android:layout_marginBottom="475dp"
        android:text="@string/cachorro_quente"
        android:textColor="@color/lightputple"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtRefri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="318dp"
        android:layout_marginBottom="381dp"
        android:text="@string/refrigerante"
        android:textColor="@color/lightputple"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtSQuantidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="229dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_text_hint"
        android:inputType="number"
        android:minHeight="48dp"
        android:singleLine="true"
        android:text="0"
        android:textColor="@color/lightputple"
        android:textColorHint="@color/purple"
        android:translationY="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSobremesa"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txtRPreco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="358dp"
        android:layout_marginEnd="304dp"
        android:layout_marginBottom="343dp"
        android:text="@string/r_preco"
        android:textColor="@color/lightputple"
        android:textSize="24sp"
        android:translationX="-2dp"
        android:translationY="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSobremesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="415dp"
        android:layout_marginBottom="284dp"
        android:text="@string/sobremesa"
        android:textColor="@color/lightputple"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSPreco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="459dp"
        android:layout_marginEnd="304dp"
        android:layout_marginBottom="242dp"
        android:text="@string/s_preco"
        android:textColor="@color/lightputple"
        android:textSize="24sp"
        android:translationX="-2dp"
        android:translationY="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtRQuantidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="326dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_text_hint"
        android:inputType="number"
        android:minHeight="48dp"
        android:singleLine="true"
        android:text="0"
        android:textColor="@color/lightputple"
        android:textColorHint="@color/purple"
        android:translationY="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRefri"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="143dp"
        android:layout_marginTop="553dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="130dp"
        android:backgroundTint="@color/lightputple"
        android:onClick="botaoCalcular"
        android:text="@string/botao_calcular"
        android:textColor="@color/bg"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>