<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".HorarioActivity">

    <Button
        android:id="@+id/btnCalcular2"
        android:layout_width="132dp"
        android:layout_height="79dp"
        android:backgroundTint="@color/lightputple"
        android:onClick="botaoCalcular"
        android:text="@string/botao_calcular"
        android:textColor="@color/bg"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.716" />

    <TextView
        android:id="@+id/txtHorarioTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="597dp"
        android:justificationMode="none"
        android:text="@string/horario_titulo"
        android:textAlignment="center"
        android:textColor="@color/lightputple"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="589dp"
        android:justificationMode="none"
        android:text="@string/horario_saida"
        android:textAlignment="center"
        android:textColor="@color/lightputple"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtInstrucoes"
        android:layout_width="304dp"
        android:layout_height="74dp"
        android:justificationMode="none"
        android:text="@string/instrucoes"
        android:textAlignment="center"
        android:textColor="@color/lightputple"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.382" />

    <EditText
        android:id="@+id/edtInputTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="58dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_text_hint"
        android:inputType="number"
        android:minHeight="48dp"
        android:singleLine="true"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@color/lightputple"
        android:textColorHint="@color/purple"
        android:translationY="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCalcular2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInstrucoes"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>